form spacing fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4164,6 +4164,10 @@ label {
   min-height: 100px;
 }
 
+.form-group.last{
+  min-height: 75px;
+}
+
 .contact-map {
   margin-bottom: -9px;
 }
